--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "fs": "^0.0.1-security",
     "google-spreadsheet": "^2.0.5",
+    "joi": "^13.4.0",
+    "lodash": "^4.17.10",
+    "openmrs.js": "^0.0.2",
     "winston": "^3.0.0"
   },
   "devDependencies": {
     "@types/async": "^2.0.49",
+    "@types/dotenv": "^4.0.3",
+    "@types/joi": "^13.4.0",
+    "@types/lodash": "^4.14.111",
     "@types/node": "^10.5.2",
     "@types/winston": "^2.3.9",
     "tslint": "^5.10.0",
